# api_shop_with_rust

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/2019-10-25-095754_db-shop/: up.sql
src/: main.rs  product.rs  schema.rs
