[package]
name = "api_shop_with_rust"
version = "0.1.0"
authors = ["Jhonny Neciosup Millones <jhonny.neciosup@indagia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = "1.0.101"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.6", features = ["mysql"] }
diesel_codegen = { version = "*", features = ["mysql"] }
r2d2 = "*"
r2d2-diesel = "*"
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
